# ai-development-framework

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  README.md  ROADMAP.md  go.mod  install-adf.ps1  install-adf.sh  install.ps1  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
cmd/adf/: main.go
docs/: 001-vision.md  002-principles.md  003-architecture.md  004-token-economy.md  005-terminology.md  006-release-process.md  007-intent-routing.md  008-cli-installation.md  009-native-cli.md  01-architecture.md  010-compatibility-mode.md  011-self-update.md  02-orchestration.md  03-project-memory.md  04-context-economy.md  05-installation.md  06-uninstallation.md
internal/adf/: adf_test.go  compatibility.go  doctor.go  files.go  init.go  install.go  manifest.go  output.go  paths.go  uninstall.go  update.go  update_nonwindows.go  update_test.go  update_windows.go  version.go
internal/assets/: embed.go
internal/assets/assets/skills/loop/: SKILL.md
internal/assets/assets/skills/preflight/: SKILL.md
internal/assets/assets/skills/route/: SKILL.md
scripts/: init-workspace.ps1  init-workspace.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh  validate.py
skills/context/: SKILL.md
skills/docs/: SKILL.md
skills/implement/: SKILL.md
skills/init-workspace/: SKILL.md
skills/memory/: SKILL.md
skills/plan/: SKILL.md
skills/review/: SKILL.md
src/adf_cli/: cli.py  core.py
templates/project-workspace/.claude/: CLAUDE.md  context-budget.md
tests/: test_cli.py  test_repository.py
(+12 files in other folders)
