[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-development-framework"
version = "0.5.0"
description = "Framework de desenvolvimento orientado por Skills para Claude Code"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "AI Development Framework contributors"}
]
dependencies = []

[project.scripts]
adf = "adf_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
adf_cli = [
  "assets/skills/*/SKILL.md",
  "assets/templates/project-workspace/.claude/*",
  "assets/templates/project-workspace/.claude/**/*"
]
